# NextEventSimulationFramework

./: .gitignore  CMakeLists.txt  README.md
event_queues/: event_queue.c  event_queue.h
events/: event.c  event.h
libs/GenericQueue/: CMakeLists.txt  generic_queue.c  generic_queue.h
libs/GenericQueue/tests/: CMakeLists.txt  test_generic_queue.c
libs/RandomVariates/: CMakeLists.txt  rvms.c  rvms.h
simulation/: simulation.c  simulation.h
tests/: CMakeLists.txt  test_event_removal.c  test_multiple_insertions.c  test_simulation.c  test_simulation_metadata.c  test_simulation_mm1.c
